<resources>
    <string name="app_name" translatable="false">Meditation</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>

    <string name="title_activity_home">Meditation</string>
    <string name="action_settings">Settings</string>
    <string name="language">Language</string>
    <string name="title">Title</string>
    <string name="viewall">VIEW ALL</string>
    <string name="sign_up">Sign Up</string>
    <string name="dont_account">Don\'t Have an Account?</string>
    <string name="rememberme">Remember Me</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="phoneNo">PhoneNo</string>
    <string name="regis">Registration</string>
    <string name="alreadyhaveanaccountyet">Already have an account yet?</string>
    <string name="login">Log In</string>
    <string name="password">Password</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_confirm_password">Confirm Password</string>
    <string name="internet_connection">Internet connection not available</string>
    <string name="loading">Loading..</string>
    <string name="theme">Theme</string>
    <string name="home">Sounds</string>
    <string name="favoritess">Favorite</string>
    <string name="resent">Recent Music</string>
    <string name="resen">Recent</string>
    <string name="profile">Profile</string>
    <string name="please_enter_name">please enetr name</string>
    <string name="please_enter_phone">Please enter phone no</string>
    <string name="createac">Create a new account</string>
    <string name="music_app">Music App</string>
    <string name="welcome">Welcome To,</string>
    <string name="email_profile">Email </string>
    <string name="name_profile">Name </string>
    <string name="mostplay">Most Play</string>
    <string name="allplay">Play All</string>
    <string name="populer_artist">Popular Artist</string>
    <string name="populer_album">Popular Albums</string>
    <string name="reco">Recommended</string>
    <string name="music">Music</string>
    <string name="movie">Movies</string>
    <string name="album">Album</string>
    <string name="own">Own Playlist</string>
    <string name="quickstart_message">Click the SUBSCRIBE TO WEATHER button below to subscribe to the
        weather topic. Messages sent to the weather topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.</string>
    <string name="subscribe_to_weather">Subscribe To Weather</string>
    <string name="log_token">Log Token</string>
    <string name="default_notification_channel_name">Weather</string>
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">FCM Message</string>
    <string name="nothing">Nothing to Show !</string>
    <string name="artist">Artist</string>
    <string name="local">LOCAL</string>

    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="topplay">Top Play</string>
    <string name="sleepplay">Sleep Stories</string>

    <string name="journeys">Journeys</string>
    <string name="more">More</string>
    <string name="privacy">Privacy Policy</string>

</resources>