<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <RelativeLayout
        android:layout_toLeftOf="@+id/cglhbv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="30dp"
        android:layout_above="@+id/zosidfh">
        <LinearLayout
            android:id="@+id/fdgj"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="21dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_below="@+id/fdgj"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/sec_bottom"
            android:orientation="vertical"
            android:weightSum="10">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="center"
                android:orientation="vertical"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    >

                    <EditText
                        android:id="@+id/editText_email_login_activity"
                        android:layout_width="match_parent"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:layout_height="50dp"
                        android:layout_gravity="bottom"
                        android:focusable="true"
                        android:hint="@string/email"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:textSize="16sp"
                        android:background="@drawable/logineditetextbg"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    >

                    <EditText
                        android:id="@+id/editText_password_login_activity"
                        android:layout_width="match_parent"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:layout_height="50dp"
                        android:background="@drawable/logineditetextbg"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:layout_gravity="top"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textSize="16sp" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:orientation="vertical"
                android:weightSum="10">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <cn.refactor.library.SmoothCheckBox
                        android:id="@+id/checkbox_login_activity"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        app:color_unchecked="@color/white"
                        app:color_checked="@color/prim" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:text="@string/rememberme"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:gravity="center"
                    android:weightSum="2">

                    <TextView
                        android:background="@drawable/loginbuttonbg"
                        android:textColor="@color/colorPrimary"
                        android:id="@+id/button_login_activity"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:text="Sign In"
                        android:gravity="center"
                        android:textSize="20dp"
                        android:src="@drawable/loginbuttonbg"
                        />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>


        <LinearLayout
            android:id="@+id/sec_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dont_account"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView_signup_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/sign_up"
                    android:textColor="@color/prim"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>


            <View
                android:layout_width="100dp"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="@color/white" />

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>